<resources>
    <string name="app_name">appGAS</string>
    <string name="title_activity_act_menu_base">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_act_direccion">Map</string>
    <string name="title_activity_login_gas">LoginGas</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_numerotarjeta">Número de Tarjeta</string>
    <string name="prompt_titulartarjeta">Titular de la Tarjeta</string>
    <string name="prompt_vencimientotarjeta">MM / YY</string>
    <string name="prompt_codigotarjeta">CVC</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_pay">Pagar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_button_registrar">Registrar</string>


</resources>