<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MetodoPagoActivity">


    <EditText
        android:id="@+id/txtCodigoTarjeta"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/input_rounded"
        android:elevation="3dp"
        android:hint="@string/prompt_codigotarjeta"
        android:inputType="number"
        android:maxLength="4"
        android:padding="10dip"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitular" />

    <EditText
        android:id="@+id/txtVencimMM"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_rounded"
        android:digits="0123456789"
        android:elevation="3dp"
        android:hint="MM"
        android:inputType="text"
        android:maxLength="2"
        android:padding="10dip"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitular" />

    <EditText
        android:id="@+id/txtVencimAA"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_rounded"
        android:elevation="3dp"
        android:hint="AA"
        android:inputType="number"
        android:maxLength="2"
        android:padding="10dip"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/txtTitular" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_barrasup" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="Hola Claudio"
        android:textColor="#F8F7F7"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Método de pago"
        android:textColor="#F8F6F6"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@+id/tvUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_alert_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circulo" />

    <TextView
        android:id="@+id/tvCantidadAlertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:text="4"
        android:textColor="#FFFEFE"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/tarjetacredito" />

    <EditText
        android:id="@+id/txtNumeroTarjeta"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/input_rounded"
        android:elevation="3dp"
        android:hint="@string/prompt_numerotarjeta"
        android:inputType="number"
        android:maxLength="16"
        android:padding="10dip"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <EditText
        android:id="@+id/txtTitular"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/input_rounded"
        android:elevation="3dp"
        android:hint="@string/prompt_titulartarjeta"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroTarjeta" />

    <Button
        android:id="@+id/btnPagarMetodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button"
        android:elevation="3dp"
        android:text="@string/action_sign_in"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVencimMM"
        tools:text="Pagar S" />

    <TextView
        android:id="@+id/tvPagoEfectivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textWebEditText"
        android:text="Pagar con efectivo contraentrega"
        android:textColor="#827BF3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPagarMetodo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangulo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_baseline_store_mall_directory_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_baseline_description_24"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="/"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtVencimMM"
        app:layout_constraintTop_toBottomOf="@+id/txtTitular" />


</androidx.constraintlayout.widget.ConstraintLayout>